fix: Restrict user input to prevent abnormalies